# ekom_test_task

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  main.py
app/core/: logger.py  settings.py
app/engines/: mongo.py
app/repositories/: form_template.py
app/routers/: __init__.py  form.py
app/schemas/: form.py
app/services/: form_template.py
mongo/migrations/: 0001_init.js
tests/functional/: test_form_template.py
